# Codemuse

./: .env.example  .gitignore  PROJECT_GUIDE.md  README.md  pyproject.toml  start-windows.bat  start-windows.ps1  stop-windows.bat  stop-windows.ps1
.github/: release-template.md
artifacts/: README.md
benchmarks/: README.md
docs/: code-flowline.md  demo.md  interview-narrative.md  interview-qa.md  known-limitations.md  safety.md  source-map.md  source-reading-guide.md
evals/: README.md
releases/: README.md
scripts/: run_agent.py  run_eval.py  run_server.py
skills/: README.md
src/codemuse/: __init__.py
src/codemuse/api/: __init__.py  sdk.py
src/codemuse/app/: __init__.py  bootstrap.py  extensions_runtime.py  resources.py  skills_runtime.py
src/codemuse/benchmarks/: __init__.py  baseline.py  live.py  models.py  report.py
src/codemuse/browser/: __init__.py
src/codemuse/capabilities/: __init__.py  catalog.py  descriptor.py  discovery.py
src/codemuse/cli/: __init__.py  main.py  render.py
src/codemuse/compat/: __init__.py
src/codemuse/config/: __init__.py  manager.py  patch.py  schema.py  (+1 more)
tests/: test_api_sdk.py  test_approval_safety.py  test_blueprint_memory.py  test_capabilities.py  test_checkpoint_rewind.py  test_cli_main.py  test_config_manager.py  test_demo.py  test_eval_baseline.py  test_llm_provider.py  test_mcp_integration.py  test_memory_context.py  test_project_memory.py  test_readiness.py  test_repo_import_plan.py  test_server_api.py  test_subagents.py  test_timeline.py  test_tool_registry.py  test_web_fetch.py
web/: README.md
(+122 files in other folders)
