[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codemuse"
version = "0.1.0"
description = "CodeMuse: a coding agent that turns repositories into reusable project blueprints."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
codemuse = "codemuse.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"codemuse.web.static" = ["*.html", "*.js", "*.css", "assets/*.png"]
